--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Lobster&family=Mochiy+Pop+One&family=Playfair+Display:ital,wght@0,500;0,700;0,800;0,900;1,700;1,900&display=swap" rel="stylesheet"></link>
     <title>React App</title>
   </head>
   <body>
